# water-counter

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  test_api.py
backend/app/: __init__.py  config.py  crud.py  database.py  models.py  router.py  schemas.py  websocket.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
